name:              Conduit
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Dave Fayram
maintainer:        Dave Fayram
synopsis:          The greatest Yesod web application ever.
description:       I'm sure you can say something clever here if you try.
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://Conduit.yesodweb.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: ., config
    other-modules:   Tap
                     Tap.Redis
                     Settings
                     StaticFiles
                     Handler.Root

executable         Conduit
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       config/Conduit.hs
    hs-source-dirs: ., config
    build-depends: base         >= 4       && < 5
                 , yesod-core   >= 0.8     && < 0.9
                 , yesod-static
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , template-haskell
                 , hamlet
                 , transformers
                 , wai
                 , warp
                 , blaze-builder
                 , enumerator
                 , redis >= 0.12
                 , containers
                 , stm
                 , monadIO

    ghc-options:   -Wall -threaded
